--- a/index.html
+++ b/index.html
@@ -11,8 +11,14 @@
 </head>
 <body>
 
-<div id="root">
-    
+<div id="root" class="d-flex justify-content-center align-items-center">
+
+    <!--app-->
+    <div class="app d-flex">
+        <div class="w-25 bg-primary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae culpa fugit dolor exercitationem magnam similique nihil placeat possimus nostrum, quae animi repellendus at? Harum accusantium illo, tempore totam porro quidem?</div>
+        <div class="flex-grow-1 bg-secondary"></div>
+    </div>
+
 
 
 </div>
