--- a/index.html
+++ b/index.html
@@ -15,7 +15,41 @@
 
     <!--app-->
     <div class="app d-flex">
-        <div class="w-25 bg-primary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae culpa fugit dolor exercitationem magnam similique nihil placeat possimus nostrum, quae animi repellendus at? Harum accusantium illo, tempore totam porro quidem?</div>
+
+        <!--side part-->
+        <div class="w-25">
+
+            <!--profilo-->
+            <div class="d-flex justify-content-between bg-lightgray container">
+              <div>
+                <div class="img-container m-1">
+                    <img class="w-50 circle" src="assets/img/avatar_io.jpg" alt="avatar_io">
+                    <span>Sofia</span>
+                </div>
+                    
+                
+              </div>
+              <div></div>  
+            </div>
+
+            <!--notifiche-->
+            <div>
+
+            </div>
+
+            <!--cerca-->
+            <div>
+
+            </div>
+
+            <!--lista contatti-->
+            <div>
+
+            </div>
+
+        </div>
+
+        <!--main part-->
         <div class="flex-grow-1 bg-secondary"></div>
     </div>
 
