inizio sezione notifiche

--- a/index.html
+++ b/index.html
@@ -25,16 +25,19 @@
                 <div class="img-container m-1">
                     <img class="w-50 circle" src="assets/img/avatar_io.jpg" alt="avatar_io">
                     <span>Sofia</span>
-                </div>
-                    
-                
+                </div>                      
               </div>
-              <div></div>  
+
+              <div class="text-lightgray d-flex align-items-center">
+                <i class=" m-1 fa-solid fa-circle-notch"></i>
+                <i class="m-1 fa-solid fa-message"></i>
+                <i class="m-1 fa-solid fa-ellipsis-vertical"></i>
+              </div>  
             </div>
 
             <!--notifiche-->
-            <div>
-
+            <div class="notifiche">
+                lorem
             </div>
 
             <!--cerca-->
