--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
 
             <!--notifiche-->
             <div class="notifiche">
-                lorem
+                <div class="icon-notifiche">
+                    <i class="fa-solid fa-bell-slash"></i> 
+                </div>
             </div>
 
             <!--cerca-->
