--- a/index.html
+++ b/index.html
@@ -29,16 +29,20 @@
               </div>
 
               <div class="text-lightgray d-flex align-items-center">
-                <i class=" m-1 fa-solid fa-circle-notch"></i>
+                <i class="m-1 fa-solid fa-circle-notch"></i>
                 <i class="m-1 fa-solid fa-message"></i>
                 <i class="m-1 fa-solid fa-ellipsis-vertical"></i>
               </div>  
             </div>
 
             <!--notifiche-->
-            <div class="notifiche">
-                <div class="icon-notifiche">
+            <div class="notifiche d-flex">
+                <div class="noti-icon">
                     <i class="fa-solid fa-bell-slash"></i> 
+                </div>
+                <div>
+                    <div class="p-1 noti-text">Ricevi notifiche di nuovi messaggi</div>
+                    <a href="#" class="noti-link p-1">Attiva notifiche desktop</a>
                 </div>
             </div>
 
