--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="app d-flex">
 
         <!--side part-->
-        <div class="w-25">
+        <div class="w-25 side-part">
 
             <!--profilo-->
             <div class="d-flex justify-content-between bg-lightgray container">
@@ -47,13 +47,40 @@
             </div>
 
             <!--cerca-->
-            <div>
-
+            <div class="search-container">
+                <div class="mx-2 d-flex justify-content-center align-items-center m-1">
+                    <i class="fa-solid fa-magnifying-glass m-1"></i>
+                    <input type="text" class="flex-grow-1 border-0 border-bottom-1" placeholder="Cerca o inizia una nuova chat">
+                </div>
             </div>
 
             <!--lista contatti-->
-            <div>
+            <div class="contact-list">
+                <div class="d-flex justify-content-between bg-lightgray container">
+                    <div>
+                      <div class="img-container m-1">
+                          <img class="w-50 circle" src="assets/img/avatar_io.jpg" alt="avatar_io">
+                          <span>Sofia</span>
+                      </div>                      
+                    </div>
+      
+                    <div class="text-lightgray d-flex align-items-center">
+                     <span>lorem</span>
+                    </div>  
+                  </div>
 
+                  <div class="d-flex justify-content-between container">
+                    <div>
+                      <div class="img-container m-1">
+                          <img class="w-50 circle" src="assets/img/avatar_io.jpg" alt="avatar_io">
+                          <span>Sofia</span>
+                      </div>                      
+                    </div>
+      
+                    <div class="text-lightgray d-flex align-items-center">
+                     <span>lorem</span>
+                    </div>  
+                  </div>
             </div>
 
         </div>
