--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </div>
                 <div>
                     <div class="p-1 noti-text">Ricevi notifiche di nuovi messaggi</div>
-                    <a href="#" class="noti-link p-1">Attiva notifiche desktop</a>
+                    <a href="#" class="noti-link p-1 text-secondary">Attiva notifiche desktop</a>
                 </div>
             </div>
 
@@ -86,9 +86,32 @@
         </div>
 
         <!--main part-->
-        <div class="flex-grow-1 bg-secondary"></div>
-    </div>
+        <div class="flex-grow-1 h-100">
+            <!-- top part -->
+            <div class="d-flex justify-content-between bg-lightgray container top-part">
+                <div>
+                  <div class="img-container m-1">
+                      <img class="w-50 circle" src="assets/img/avatar_io.jpg" alt="avatar_io">
+                      <span>Sofia</span>
+                  </div>                      
+                </div>
+  
+                <div class="text-lightgray d-flex align-items-center">
+                    <i class="m-2 fa-solid fa-magnifying-glass"></i>
+                    <i class="m-2 fa-solid fa-paperclip"></i>
+                    <i class="m-2 fa-solid fa-ellipsis-vertical"></i>
+                </div>  
+              </div>
 
+              <!--chatbox-->
+              <div class="container chatbox flex-grow-1">
+               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur facere, alias harum sint voluptatem reiciendis quidem nostrum cumque asperiores, mollitia deleniti sed. Mollitia modi distinctio nemo beatae ex molestiae sint?
+              </div>
+
+        </div>
+
+
+    </div>
 
 
 </div>
