--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
         <div class="flex-grow-1 h-100">
             <!-- top part -->
             <div class="d-flex justify-content-between bg-lightgray container top-part">
-                <div>
-                  <div class="img-container m-1">
+                <div class="align-items-center d-flex">
+                  <div class="img-container m-1 align-items-center d-flex">
                       <img class="w-50 circle" src="assets/img/avatar_io.jpg" alt="avatar_io">
                       <span>Sofia</span>
                   </div>                      
@@ -106,6 +106,15 @@
               <!--chatbox-->
               <div class="container chatbox flex-grow-1">
                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur facere, alias harum sint voluptatem reiciendis quidem nostrum cumque asperiores, mollitia deleniti sed. Mollitia modi distinctio nemo beatae ex molestiae sint?
+              </div>
+
+
+              <!--bottom part-->
+              <div class="user-input d-flex p-2 justify-content-around align-items-center">
+                <i class="fa-regular fa-face-smile fs-4 mx-3"></i>
+                <input type="text" name="" id="" class="flex-grow-1">
+                <i class="fa-solid fa-microphone fs-4 mx-3"></i>
+
               </div>
 
         </div>
