--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
               <!--chatbox-->
               <div class="container chatbox flex-grow-1">
-               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur facere, alias harum sint voluptatem reiciendis quidem nostrum cumque asperiores, mollitia deleniti sed. Mollitia modi distinctio nemo beatae ex molestiae sint?
+               <div class="message m-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. </div>
               </div>
 
 
