--- a/index.html
+++ b/index.html
@@ -104,8 +104,10 @@
               </div>
 
               <!--chatbox-->
-              <div class="container chatbox flex-grow-1">
-               <div class="message m-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. </div>
+              <div class="chatbox flex-grow-1 d-flex flex-column">
+               <div class="message recived justify-content-around m-4 p-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. </div>
+               <div class="message sent justify-content-around m-4 p-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. </div>
+               
               </div>
 
 
