--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
 
             <!--lista contatti-->
             <div class="contact-list">
-                <div class="d-flex justify-content-between bg-lightgray container">
+                <div class="d-flex justify-content-between bg-lightgray container" v-for="(name, index) in contacts">
                     <div>
                       <div class="img-container m-1">
-                          <img class="w-50 circle" src="assets/img/avatar_io.jpg" alt="avatar_io">
-                          <span>Sofia</span>
+                          <img class="w-50 circle" :src="'assets/img/avatar' + contacts[index].avatar + '.jpg'" alt="avatar_io">
+                          <span>{{ contact.name }}</span>
                       </div>                      
                     </div>
       
@@ -69,7 +69,7 @@
                     </div>  
                   </div>
 
-                  <div class="d-flex justify-content-between container">
+                  <!-- <div class="d-flex justify-content-between container">
                     <div>
                       <div class="img-container m-1">
                           <img class="w-50 circle" src="assets/img/avatar_io.jpg" alt="avatar_io">
@@ -80,7 +80,7 @@
                     <div class="text-lightgray d-flex align-items-center">
                      <span>lorem</span>
                     </div>  
-                  </div>
+                  </div> -->
             </div>
 
         </div>
