--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
                 <div class="d-flex justify-content-between bg-lightgray container" v-for="(name, index) in contacts">
                     <div>
                       <div class="img-container m-1">
-                          <img class="w-50 circle" :src="'assets/img/avatar' + contacts[index].avatar + '.jpg'" alt="avatar_io">
-                          <span>{{ contact.name }}</span>
+                          <img class="w-50 circle" :src="'assets/img/avatar' + contacts[index].avatar + '.jpg'" alt="">
+                          <span>{{ contacts.name }}</span>
                       </div>                      
                     </div>
       
