--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
             </div>
 
             <!--lista contatti-->
-            <div class="contact-list">
-                <div class="d-flex justify-content-between bg-lightgray container" v-for="(name, index) in contacts">
+            <div class="contact-list" v-for="(element, index) in contacts">
+                <div class="d-flex justify-content-between bg-lightgray container" >
                     <div>
                       <div class="img-container m-1">
-                          <img class="w-50 circle" :src="'assets/img/avatar' + contacts[index].avatar + '.jpg'" alt="">
-                          <span>{{ contacts.name }}</span>
+                          <img class="w-50 circle" :src="contacts[index].avatar">
+                          <span>{{ element.name }}</span>
                       </div>                      
                     </div>
       
@@ -68,19 +68,6 @@
                      <span>lorem</span>
                     </div>  
                   </div>
-
-                  <!-- <div class="d-flex justify-content-between container">
-                    <div>
-                      <div class="img-container m-1">
-                          <img class="w-50 circle" src="assets/img/avatar_io.jpg" alt="avatar_io">
-                          <span>Sofia</span>
-                      </div>                      
-                    </div>
-      
-                    <div class="text-lightgray d-flex align-items-center">
-                     <span>lorem</span>
-                    </div>  
-                  </div> -->
             </div>
 
         </div>
@@ -133,6 +120,6 @@
 <!-- vue2 -->
 <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
 <!-- mio script -->
-<script src="main.js"></script>
+<script src="assets/js/main.js"></script>
 </body>
 </html>
