--- a/index.html
+++ b/index.html
@@ -68,6 +68,19 @@
                      <span>lorem</span>
                     </div>  
                   </div>
+
+                  <!-- <div class="d-flex justify-content-between container">
+                    <div>
+                      <div class="img-container m-1">
+                          <img class="w-50 circle" src="assets/img/avatar_io.jpg" alt="avatar_io">
+                          <span>Sofia</span>
+                      </div>                      
+                    </div>
+      
+                    <div class="text-lightgray d-flex align-items-center">
+                     <span>lorem</span>
+                    </div>  
+                  </div> -->
             </div>
 
         </div>
