function select chat

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="contact-list" v-for="(element, index) in contacts">
                 <div class="d-flex justify-content-between border-bottom border-secondary p-2 container" >
                     <div>
-                      <div class="img-conok erikatainer m-1 d-flex align-items-center">
+                      <div class="m-1 d-flex align-items-center">
                           <img class="w-50 circle" :src="contacts[index].avatar">
                           <div>
                              <span>{{ element.name }}</span>
