funzione messaggio inviato

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
               <!--bottom part-->
               <div class="user-input d-flex p-2 justify-content-around align-items-center">
                 <i class="fa-regular fa-face-smile fs-4 mx-3"></i>
-                <input v-model="message" type="text" id="userInput" @keyup.enter="sendMessage" class="flex-grow-1" placeholder="scrivi il tuo messaggio">
+                <input v-model="userMessage" type="text" id="userInput" @keyup.enter="sendMessage" class="flex-grow-1" placeholder="scrivi il tuo messaggio">
                 <i class="fa-solid fa-microphone fs-4 mx-3"></i>
 
               </div>
