--- a/index.html
+++ b/index.html
@@ -55,25 +55,28 @@
             </div>
 
             <!--lista contatti-->
-            <div class="contact-list" v-for="(element, index) in contacts">
-                <div class="d-flex justify-content-between border-bottom border-secondary p-2 container" @click="selectContact(index)">
-                    <div>
-                      <div class="m-1 d-flex align-items-center">
-                          <img class="w-50 circle" :src="contacts[index].avatar">
-                          <div>
-                             <span>{{ element.name }}</span>
-                          <div class="last-msg">{{element.messages[element.messages.length - 1].message}}</div>
-                          </div>
+            <div class="overflow">
+                <div class="contact-list" v-for="(element, index) in contacts">
+                     <div class="d-flex justify-content-between border-bottom border-secondary p-2 container" @click="selectContact(index)">
+                        <div>
+                            <div class="m-1 d-flex align-items-center">
+                                <img class="w-50 circle" :src="contacts[index].avatar">
+                                <div>
+                                    <span>{{ element.name }}</span>
+                                    <div class="last-msg">{{element.messages[element.messages.length - 1].message}}</div>
+                                </div>
                          
-                      </div>                      
-                    </div>
+                            </div>                      
+                        </div>
       
-                    <div class="text-lightgray d-flex align-items-center last-msg">
-                     <span>{{element.messages[element.messages.length - 1].date}}</span>
-                    </div>  
-                  </div>
+                        <div class="text-lightgray date">
+                            <span>{{element.messages[element.messages.length - 1].date}}</span>
+                        </div>  
+                    </div>
 
+                </div> 
             </div>
+
 
         </div>
 
@@ -98,7 +101,7 @@
               <!--chatbox-->
               <div class="chatbox flex-grow-1 d-flex flex-column">
                 <div v-for="(elem, index) in contacts[currentContact].messages" class="message m-3 p-3 justify-content-between d-flex" :class="elem.status == 'sent' ? 'sent' : 'recived'">{{elem.message}} 
-                    <span click="delete"><i class="fa-solid fa-chevron-down"></i></span>
+                    <span ><i class="fa-solid fa-chevron-down" @click="deleteMsg"></i></span>
                 </div>
               </div>
 
