--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
             <!--lista contatti-->
             <div class="overflow">
                 <div class="contact-list" v-for="(element, index) in contacts">
-                     <div class="d-flex justify-content-between border-bottom border-secondary p-2 container" @click="selectContact(index)">
+                     <div class="d-flex justify-content-between border-bottom border-secondary p-2 container selected" @click="selectContact(index)">
                         <div>
                             <div class="m-1 d-flex align-items-center">
-                                <img class="w-50 circle" :src="contacts[index].avatar">
+                                <img class="w-50 circle px-1" :src="contacts[index].avatar">
                                 <div>
                                     <span>{{ element.name }}</span>
                                     <div class="last-msg">{{element.messages[element.messages.length - 1].message}}</div>
@@ -71,6 +71,7 @@
       
                         <div class="text-lightgray date">
                             <span>{{element.messages[element.messages.length - 1].date}}</span>
+                            <!-- <span> {{getLastHourMessages(elem) }}</span> -->
                         </div>  
                     </div>
 
@@ -101,7 +102,11 @@
               <!--chatbox-->
               <div class="chatbox flex-grow-1 d-flex flex-column">
                 <div v-for="(elem, index) in contacts[currentContact].messages" class="message m-3 p-3 justify-content-between d-flex" :class="elem.status == 'sent' ? 'sent' : 'recived'">{{elem.message}} 
-                    <span ><i class="fa-solid fa-chevron-down" @click="deleteMsg"></i></span>
+                    <div class="d-flex flex-column justify-content-between">
+                      <span class="align-self-end"><i class="fa-regular fa-x text-danger" @click="deleteMsg"></i></span>
+                    <span class="date align-self-end">{{ elem.date }}</span>  
+                    </div>
+                    
                 </div>
               </div>
 
@@ -122,11 +127,18 @@
 
 </div>
 
+<!-- dayjs -->
+<script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
 <!-- bootstrap -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 <!-- vue2 -->
 <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
 <!-- mio script -->
 <script src="assets/js/main.js"></script>
+
+<!-- <script>
+    var now = dayjs().format('H:mm');
+    console.log(now)
+</script> -->
 </body>
 </html>
