--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <!--lista contatti-->
             <div class="overflow">
                 <div class="contact-list" v-for="(elem, index) in contacts">
-                     <div class="d-flex justify-content-between border-bottom border-secondary p-2 container" @click="selectContact(index)" :class="(index == currentContact) ? 'selected' : ''">
+                     <div class="d-flex justify-content-between border-bottom border-secondary p-2 container" @click="selectContact(index)" :class="(index == currentContact) ? 'selected' : ''" v-if="elem.visible">
                         <div>
                             <div class="m-1 d-flex align-items-center">
                                 <img class="w-50 circle px-1" :src="contacts[index].avatar">
